[gd_scene load_steps=23 format=3 uid="uid://bt7d6dj4gs6p1"]

[ext_resource type="Script" path="res://characters/enemy.gd" id="1_d8gr1"]
[ext_resource type="Texture2D" uid="uid://cw1qbmk3trkkc" path="res://gfx/assets/Characters/uomobase.png" id="2_j6f3s"]
[ext_resource type="Texture2D" uid="uid://c0wcnko8uy0c" path="res://gfx/temp/human_base.png" id="2_sy3kq"]
[ext_resource type="Script" path="res://characters/character_stats.gd" id="3_cc1bd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xafxm"]
atlas = ExtResource("2_j6f3s")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klweb"]
atlas = ExtResource("2_j6f3s")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_703p4"]
atlas = ExtResource("2_j6f3s")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmm7p"]
atlas = ExtResource("2_j6f3s")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ykfb"]
atlas = ExtResource("2_j6f3s")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3tw2"]
atlas = ExtResource("2_j6f3s")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk8jv"]
atlas = ExtResource("2_sy3kq")
region = Rect2(80, 36, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_46ltx"]
atlas = ExtResource("2_sy3kq")
region = Rect2(96, 36, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6tet"]
atlas = ExtResource("2_sy3kq")
region = Rect2(112, 36, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhjs3"]
atlas = ExtResource("2_sy3kq")
region = Rect2(128, 36, 16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vjiv"]
atlas = ExtResource("2_j6f3s")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0fyw"]
atlas = ExtResource("2_j6f3s")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eo73"]
atlas = ExtResource("2_j6f3s")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb6ff"]
atlas = ExtResource("2_j6f3s")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4rpm"]
atlas = ExtResource("2_j6f3s")
region = Rect2(128, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xm215"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xafxm")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_klweb")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_703p4")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmm7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ykfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3tw2")
}],
"loop": true,
"name": &"smile",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk8jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46ltx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6tet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhjs3")
}],
"loop": true,
"name": &"suffering",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vjiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0fyw")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eo73")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb6ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4rpm")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2nq3s"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6fo1d"]
radius = 35.1283

[node name="Enemy" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_mask = 2
slide_on_ceiling = false
floor_stop_on_slope = false
floor_block_on_wall = false
floor_max_angle = 3.14159
floor_snap_length = 0.0
platform_on_leave = 2
script = ExtResource("1_d8gr1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_xm215")
animation = &"smile"
frame_progress = 0.294098

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
shape = SubResource("CircleShape2D_2nq3s")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 8.0
path_postprocessing = 1
avoidance_enabled = true
radius = 5.0
neighbor_distance = 100.0

[node name="ChangeStateTimer" type="Timer" parent="."]

[node name="CharacterStats" type="Node" parent="."]
script = ExtResource("3_cc1bd")
type = "Normal"

[node name="LaughContagionArea2D" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="LaughContagionCollisionShape2D" type="CollisionShape2D" parent="LaughContagionArea2D"]
shape = SubResource("CircleShape2D_6fo1d")
debug_color = Color(0.701961, 0.639216, 0, 0.419608)
metadata/_edit_lock_ = true

[node name="NoHappinessAddTimer" type="Timer" parent="."]

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_path_changed"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="ChangeStateTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="LaughContagionArea2D" to="." method="_on_laugh_contagion_area_2d_body_entered"]
[connection signal="body_exited" from="LaughContagionArea2D" to="." method="_on_laugh_contagion_area_2d_body_exited"]
[connection signal="timeout" from="NoHappinessAddTimer" to="." method="_on_no_happiness_add_timer_timeout"]
